<resources>
    <string name="app_name">LEADERBOARD</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="learning_leaders_frag">Learning Leaders</string>
    <string name="skill_i_q_leaders_frag">Skill IQ Leaders</string>
    <string name="submit_menu_item">Submit</string>
    <string name="submit_button_text">Submit</string>
    <string name="project_on_github_link">Project on GITHUB (link)</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="project_submission">Project Submission</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes_accept">Yes</string>
    <string name="submission_successful">Submission Successful</string>
    <string name="submission_not_successful">Submission not Successful</string>
</resources>
