<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SubmitProjectActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/background_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/project_submission"
        android:textColor="@color/pluralsight_orange"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submit_toolbar" />

    <TextView
        android:layout_width="350dp"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/line_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
            android:id="@+id/first_name_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="48dp"
            android:background="@drawable/input_field_design"
            android:bottomLeftRadius="10dp"
            android:bottomRightRadius="10dp"
            android:hint="@string/first_name"
            android:inputType="text"
            android:padding="10dp"
            android:textSize="18sp"
            android:topLeftRadius="10dp"
            android:topRightRadius="10dp"
            app:layout_constraintBottom_toTopOf="@+id/email_text"
            app:layout_constraintEnd_toStartOf="@+id/last_name_text"
            app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/last_name_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/input_field_design"
        android:bottomLeftRadius="10dp"
        android:bottomRightRadius="10dp"
        android:hint="@string/last_name"
        android:inputType="text"
        android:padding="10dp"
        android:textSize="18sp"
        android:topLeftRadius="10dp"
        android:topRightRadius="10dp"
        app:layout_constraintBottom_toTopOf="@id/email_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/first_name_text" />

    <EditText
            android:id="@+id/email_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/input_field_design"
            android:bottomLeftRadius="10dp"
            android:bottomRightRadius="10dp"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textSize="18sp"
            android:topLeftRadius="10dp"
            android:topRightRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/last_name_text" />

        <EditText
            android:id="@+id/github_link"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/input_field_design"
            android:bottomLeftRadius="10dp"
            android:bottomRightRadius="10dp"
            android:hint="@string/project_on_github_link"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textSize="18sp"
            android:topLeftRadius="10dp"
            android:topRightRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_text"
            app:layout_constraintVertical_bias="0.121"
            tools:ignore="NotSibling" />


    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/round_button"
        android:text="@string/submit_button_text"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/github_link" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/submit_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="35dp"
        android:backgroundTint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:scaleType="fitStart"
            android:src="@drawable/toolbar_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.appcompat.widget.Toolbar>

</androidx.constraintlayout.widget.ConstraintLayout>